# sar-data-process-element

./: .cursorrules  .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  ICD-CHANGELOG.md  USECASE.md  eslint.config.mjs  nest-cli.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.claude/skills/: sdpe-algorithm-dev.md  sdpe-server-dev.md
.cursor/plans/: sdpe_cds_저장소_구조_bb2c59dc.plan.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
algorithms/csc03_range_compression/: __init__.py  range_compression_algorithm.py
apps/common-infrastructure-subsystem/: tsconfig.app.json
apps/data-collecting-subsystem/: tsconfig.app.json
apps/data-service-subsystem/: tsconfig.app.json
apps/direct-injection-subsystem/: tsconfig.app.json
apps/pipeline-workflow-subsystem/: tsconfig.app.json
apps/post-processing-tool/: tsconfig.app.json
apps/product-management-subsystem/: tsconfig.app.json
apps/sar-processing-subsystem/: tsconfig.app.json
csci/csc-02-raw-data-collector/: .gitignore  README.md  build_exe.ps1  config.json.example  dll_exports.go  go.mod  (+1 more)
deploy/: csc06-deployment.yaml  csc06-service.yaml
docs/: DAG-RATIONALE.md  README.md  SDPE-PROJECT-PURPOSE.md  UI-ALERTS.md  UI-JOBS.md  UI-PROCESSING-PROFILES.md  UI-PRODUCTS.md  USECASE-REPORT.md  USECASE.md  gitlab-cicd-setup-guide.md
frontend/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
reports/: latest.html
scripts/: generate-ci-report.mjs  send-failure-email.mjs
(+632 files in other folders)
