[project]
name = "sdpe-algorithms-workspace"
version = "0.0.1"
requires-python = ">=3.11"
description = "SDPE Algorithm Layer (Python) — SDPE-CDS-001"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["algorithms"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "algorithms"
explicit_package_bases = true
namespace_packages = true
